# CacheTracer

./: .gitignore  CMakeLists.txt  README.md  bus.cpp  bus.h  cache.cpp  cache.h  cacheline.cpp  cacheline.h  config.cpp  config.h  l1Cache.cpp  l1Cache.h  main.cpp  operation.h
QtGraphy/: QtGraphy.pro
conf/: i7.conf
graphy/: graphy.pro
memtrace/: README.md  makefile.rules  mem_trace.py  memtracer.cpp  trace_parser.py
memtrace/trace/: trace.cpp
memtrace/trace_log/: trace_log.rar
test/: mainTest.cpp
traces/: ls  ls.trace  multiThreadHead100.trace  multiThreadHead10k.miss  multiThreadHead10k.trace
